# goal_directedness

./: .gitignore  README.md  pyproject.toml
goal_directedness/: evaluator.py  main_evaluation.ipynb  naive.py  problem_decomposition.py  run_problem_decomposition.py  utils.py
goal_directedness/metrics/: metrics_answer_gpt3.5_turbo_naive.json  metrics_answer_prompt_3.json  metrics_docs_gpt3.5_turbo_naive.json  metrics_docs_naive_test.json  metrics_docs_prompt_1.json  metrics_docs_prompt_2.json  metrics_docs_prompt_3.json
goal_directedness/states/: states_gpt3.5_turbo_naive.json  states_gpt3.5_turbo_test1.json
test/: autorag_test.ipynb  dspy_test.ipynb  goal_refining.py  graph_builder.py  main_test.ipynb  problem_decomposition.py  prompt.py  prompt_store.ipynb  run.py  states.json  trustllm_test.ipynb  utils.py
test/metrics/: metrics_answer_gpt3.5_turbo_decomposition.json  metrics_answer_naive_test.json  metrics_answer_prompt_1.json  metrics_answer_prompt_2.json  metrics_answer_prompt_4.json  metrics_docs_gpt3.5_turbo_decomposition.json  metrics_docs_prompt_4.json  results_gpt3.5_turbo_test1.json
test/states/: states_naive_test.json  states_prompt_1.json  states_prompt_2.json  states_prompt_3.json  states_prompt_4.json
