[tool.poetry]
name = "goal-directedness"
version = "0.1.0"
description = ""
authors = ["sangbinyun <bin0113@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dspy-ai = "^2.5.16"
autorag = "^0.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
