[tool.poetry]
name = "goal-directedness"
version = "0.1.0"
description = ""
authors = ["sangbinyun <bin0113@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dspy-ai = "^2.5.16"
autorag = "^0.3.7"
python-dotenv = "^1.0.1"
torch = { version = "2.1.0", source="torch"}
torchaudio = { version = "2.1.0", source="torch"}
torchvision = { version = "0.16.0", source="torch"}

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
