[tool.poetry]
name = "goal-directedness"
version = "0.1.0"
description = ""
authors = ["sangbinyun <bin0113@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
autorag = "^0.3.7"
python-dotenv = "^1.0.1"
torch = { version = "2.1.0", source="torch"}
torchaudio = { version = "2.1.0", source="torch"}
torchvision = { version = "0.16.0", source="torch"}
langchain-ollama = "^0.2.0"
langgraph = "^0.2.45"
langgraph-sdk = "^0.1.35"
langgraph-checkpoint-sqlite = "^2.0.1"
tavily-python = "^0.5.0"
wikipedia = "^1.4.0"
langchain-community = "^0.3.5"
langchain-core = "^0.3.15"
langchain-openai = "^0.2.6"
langsmith = "^0.1.140"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
